fix: fix line is not showing between contact elements

--- a/styles/Heading.module.css
+++ b/styles/Heading.module.css
@@ -33,7 +33,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 
 }
 
